--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Acceuil
+title: Accueil
 nav_exclude: true
 ---
 <div class="container">
   <h1>Transcription de conférences données par Michel Onfray.</h1>
   <br>
-  <p>Vous pouvez participer à l’amélioration des transcriptions en cliquant sur le bouton violet au bas de chaque page</p>
+  <p>Vous pouvez participer à l’amélioration des transcriptions en cliquant sur le bouton au bas de chaque page</p>
 </div>
